Fix address container overflow and google pay button mobile style

--- a/css/shopping-cart.css
+++ b/css/shopping-cart.css
@@ -77,6 +77,7 @@ main {
     border-bottom: 2px solid #f9f8f6;
     justify-content: space-between;
     cursor: pointer;
+    text-overflow: ellipsis;
 }
 .order-review__map-link {
     text-decoration: none;
@@ -206,9 +207,6 @@ main {
 display: none;
 }
 
-
-
-
 .google-pay-btn:hover {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     margin: 8px 0px 12px 10px;
@@ -217,6 +215,7 @@ display: none;
 .google-pay-btn:active {
     box-shadow: none;
     transform: translateY(4px);
+    opacity: 1;
 }
 
 .quantity-input {
@@ -264,6 +263,8 @@ display: none;
     }
     .review-order-section {
         padding-top: 2rem;
+        padding-left: 1.6rem;
+        padding-right: 1.6rem;
         grid-row: 1 / 4;
         grid-column: 1 / 13;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
@@ -279,6 +280,14 @@ display: none;
         grid-column: 1 / 13;
         padding-top: inherit;
         margin: 0 1.6rem;
+    }
+    .google-pay-btn.active {
+        opacity: .9;
+    }
+    .google-pay-btn:hover {
+        box-shadow: none;
+        margin: initial;
+        opacity: 1;
     }
 }
 
